--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <h4>about</h4>
       <p>
         Are you a fan of Lion King? Did you know when Simba calls the hyenas
-        'stupid', a very nervous Zazu mutters 'Ixnay on the Upid-stay'. This is
-        Pig Latin, roughly translated it means 'Don't say stupid'.Use the
+        'stupid', a very nervous Zazu mutters 'Ixnay on the Upid-stay'. That's
+        Pig Latin, roughly translated it means 'Don't say stupid'. Use the
         translator to convert your text from English to Pig-Latin.
       </p>
     </footer>
